Francis for users

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
   // Initialize Firebase
   var valid = true;
 
+  // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyBWeZrRCOFxYcy0V-SyRMQiTAOf9M5Pt1o",
-    authDomain: "kt-project-132c7.firebaseapp.com",
-    databaseURL: "https://kt-project-132c7.firebaseio.com",
-    projectId: "kt-project-132c7",
-    storageBucket: "kt-project-132c7.appspot.com",
-    messagingSenderId: "989400514540"
+    apiKey: "AIzaSyAO9htfKtSf-7JFVCSCt0RN2epYWOCTQBI",
+    authDomain: "pinashoops2018.firebaseapp.com",
+    databaseURL: "https://pinashoops2018.firebaseio.com",
+    projectId: "pinashoops2018",
+    storageBucket: "pinashoops2018.appspot.com",
+    messagingSenderId: "72752680197"
   };
   firebase.initializeApp(config);
 
