--- a/user/user.html
+++ b/user/user.html
@@ -19,14 +19,14 @@
     <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
 <script>
-//Initialize Firebase
+// Initialize Firebase
 var config = {
-  apiKey: "AIzaSyBWeZrRCOFxYcy0V-SyRMQiTAOf9M5Pt1o",
-  authDomain: "kt-project-132c7.firebaseapp.com",
-  databaseURL: "https://kt-project-132c7.firebaseio.com",
-  projectId: "kt-project-132c7",
-  storageBucket: "kt-project-132c7.appspot.com",
-  messagingSenderId: "989400514540"
+  apiKey: "AIzaSyAO9htfKtSf-7JFVCSCt0RN2epYWOCTQBI",
+  authDomain: "pinashoops2018.firebaseapp.com",
+  databaseURL: "https://pinashoops2018.firebaseio.com",
+  projectId: "pinashoops2018",
+  storageBucket: "pinashoops2018.appspot.com",
+  messagingSenderId: "72752680197"
 };
 firebase.initializeApp(config);
 
