Francis for users

--- a/user/user.html
+++ b/user/user.html
@@ -182,7 +182,7 @@ var testDataList =
             <p>Note: Please deposit 50% of the court rate to this Account 12345678 after submitting the request
             <p>
               <button id="popup-clickie" type="button" class="btn btn-primary" onClick="submitForm('submit')" style="text-align: center;">SUBMIT REQUEST</button>
-              <button onClick="submitForm('cancel')" type="button" class="btn btn-dark">CANCEL</button>
+              <button onClick="submitForm('cancel')" type="button" class="btn btn-danger">CANCEL</button>
             </p>
           </div>
 
